[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyimclsts"
version = "0.1.2.2"
authors = [
  { name = "Choi Wang Dzak" },
]
description = "Python bindings of the IMC message schema"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["IMC", "IMC message protocol", "LSTS"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ifaddr ~= 0.2.0", 
    "ipaddress ~= 1.0.23"
]

[project.urls]
"Homepage" = "https://github.com/choiwd/pyimclsts"
"Bug Tracker" = "https://github.com/choiwd/pyimclsts/issues"